src/main/kotlin/com/example/kotlin_practice/global/error/exeption/KotlinException.kt
package com.example.kotlin_practice.global.error.exeption

abstract class KotlinException(
    val errorCode: ErrorCode
) : RuntimeException()